--- a/content.html
+++ b/content.html
@@ -15,7 +15,7 @@
   <body class="bg-[#FAFAFB] overflow-x-hidden"> 
     <nav class="fixed top-0 left-0 w-full bg-mainColor z-[1000]"> 
       <div class="container">
-        <div class="content-nav flex items-center justify-between text-white h-[81px]">
+        <div class="content-nav flex items-center justify-between text-white h-[70px]">
           <div class="logo  lg:w-[206px] maxlg:ltr:order-1"><a href="index.html"> <img class="w-full h-full" src="img/logo.svg" alt="alt" loading="lazy"></a></div>
           <div class="links w-[40%] text-white/60 lg:translate-x-[18%]">
             <ul class="flex items-center w-full justify-between maxlg:p-4 maxlg:bg-white maxlg:h-screen maxlg:top-0  maxlg:flex-col maxlg:w-56 maxlg:absolute  duration-300 maxlg:ltr:left-[-200%] maxlg:rtl:right-[-200%] maxlg:justify-start"> 
@@ -23,11 +23,11 @@
               <div class="flex  justify-end lg:hidden w-full mb-8  p-3">
                 <div class="close"><i class="fa-solid fa-bars-staggered text-mainColor  text-2xl cursor-pointer close-menu-mobile"></i></div>
               </div>
-              <li class="maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    maxlg:text-gray-600  duration-300 hover:text-2xl  maxlg:hover:text-mainColor maxlg:hover:font-bold"><a class="font-medium maxlg:w-full text-lg maxlg:block maxlg:hover:font-bold " href="index.html">home</a> </li>
-              <li class="maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    maxlg:text-gray-600  duration-300 hover:text-2xl  maxlg:hover:text-mainColor maxlg:hover:font-bold"><a class="font-medium maxlg:w-full text-lg maxlg:block maxlg:hover:font-bold " href="about.html">about us</a> </li>
-              <li class="maxlg:h-auto maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 cursor-pointer flex items-center maxlg:justify-center border group  border-mainColor  maxlg:text-center maxlg:text-gray-600  duration-300   maxlg:hover:text-mainColor font-medium   text-lg  relative maxlg:flex maxlg:border-none maxlg:hover:font-bold maxlg:flex-col">
+              <li class="capitalize maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    maxlg:text-gray-600  duration-300 hover:text-2xl  maxlg:hover:text-mainColor maxlg:hover:font-bold"><a class="font-medium maxlg:w-full text-lg maxlg:block maxlg:hover:font-bold " href="index.html">home</a> </li>
+              <li class="capitalize maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    maxlg:text-gray-600  duration-300 hover:text-2xl  maxlg:hover:text-mainColor maxlg:hover:font-bold"><a class="font-medium maxlg:w-full text-lg maxlg:block maxlg:hover:font-bold " href="about.html">about us</a> </li>
+              <li class="capitalize maxlg:h-auto maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 cursor-pointer flex items-center maxlg:justify-center border group  border-mainColor  maxlg:text-center maxlg:text-gray-600  duration-300   maxlg:hover:text-mainColor font-medium   text-lg  relative maxlg:flex maxlg:border-none maxlg:hover:font-bold maxlg:flex-col">
                 <div class="flex w-full items-center"> <span>Services</span> <i class="fa-solid fa-chevron-down ltr:ml-2 rtl:mr-2 maxlg:ltr:ml-auto maxlg:rtl:mr-auto "></i></div> 
-                <ul class="dopDown rounded-md bg-white group-hover:border lg:border-black/60 maxlg:border-none maxlg:text-[#131B39]/60 maxlg:mt-3 maxlg:static shadow absolute top-20 lg:overflow-hidden lg:h-0 lg:w-0 left-0  text-black lg:z-[-50] lg:group-hover:z-50 lg:group-hover:opacity-100 lg:group-hover:top-6 lg:group-hover:w-48 lg:group-hover:h-auto duration-500 maxlg:w-full maxlg:h-auto maxlg:hidden maxlg:group-hover:block maxlg:top-12 maxlg:maxlg:text-sm maxlg:text-start">
+                <ul class="dopDown rounded-md bg-white group-hover:border maxlg:border-none maxlg:text-[#131B39]/60 maxlg:mt-3 maxlg:static shadow absolute top-20 lg:overflow-hidden lg:h-0 lg:w-0 left-0  text-black lg:z-[-50] lg:group-hover:z-50 lg:group-hover:opacity-100 lg:group-hover:top-6 lg:group-hover:w-48 lg:group-hover:h-auto duration-500 maxlg:w-full maxlg:h-auto maxlg:hidden maxlg:group-hover:block maxlg:top-12 maxlg:maxlg:text-sm maxlg:text-start">
                   <li><a class="block p-2 lg:hover:bg-mainColor maxlg:hover:text-mainColor lg:hover:text-white duration-300 " href="service.html">Website</a></li>
                   <li><a class="block p-2 lg:hover:bg-mainColor maxlg:hover:text-mainColor lg:hover:text-white duration-300 " href="service.html">E-Commerce </a></li>
                   <li><a class="block p-2 lg:hover:bg-mainColor maxlg:hover:text-mainColor lg:hover:text-white duration-300 " href="service.html">ERP Systems</a></li>
@@ -35,7 +35,8 @@
                   <li><a class="block p-2 lg:hover:bg-mainColor maxlg:hover:text-mainColor lg:hover:text-white duration-300 " href="service.html">Web Development  </a></li>
                 </ul>
               </li>
-              <li class="maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    "><a class="font-medium lg:group-hover:font-bold maxlg:w-full text-lg maxlg:block maxlg:text-center' text-white maxlg:text-mainColor capitalize maxlg:font-bold" href="content.html">Contact Us</a> </li>
+              <li class="capitalize maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    "><a class="font-medium lg:group-hover:font-bold maxlg:w-full text-lg maxlg:block maxlg:text-center' text-white maxlg:text-mainColor capitalize maxlg:font-bold" href="content.html">Contact Us</a> </li>
+              <li class="capitalize maxlg:h-auto group maxlg:rounded-md lg:hover:text-white maxlg:w-full maxlg:mb-8 flex items-center maxlg:justify-center    maxlg:text-gray-600  duration-300 hover:text-2xl  maxlg:hover:text-mainColor maxlg:hover:font-bold"><a class="font-medium maxlg:w-full text-lg maxlg:block maxlg:hover:font-bold " href="blogger.html">blogger</a> </li>
               <li class="maxlg:h-auto maxlg:rounded maxlg:w-full bg-mainColor text-white maxlg:mb-8 uppercase items-center maxlg:justify-center lg:hidden maxlg:flex     duration-300 hover:text-2xl maxlg:hover:bg-mainColor maxlg:hover:text-white"><a class="font-medium lg:group-hover:font-bold maxlg:w-full text-lg maxlg:block maxlg:text-center  p-3 rounded-xl " href="#">Start A Project</a> </li>
               <div class="sochil lg:hidden  items-center  mt-3 maxlg:flex flex-wrap justify-between w-full "><a class="w-[50px] h-[50px] mb-3  bg-[#E0E3F8] flex items-center justify-center text-[#3F53D1] rounded-lg text-xl" href="#"><i class="fa-brands fa-facebook"></i></a><a class="w-[50px] h-[50px] mb-3  bg-[#E0E3F8] flex items-center justify-center text-[#3F53D1] rounded-lg text-xl" href="#"><i class="fa-brands fa-instagram"></i></a><a class="w-[50px] h-[50px] mb-3  bg-[#E0E3F8] flex items-center justify-center text-[#3F53D1] rounded-lg text-xl" href="#"><i class="fa-brands fa-twitter"></i></a></div>
             </ul>
@@ -46,8 +47,8 @@
           </div>
         </div>
       </div>
-    </nav><img class="relative top-[60px] w-full bg-mainColor" src="img/wave.svg" alt="alt" loading="lazy">
-    <section class="contact mt-40  relative z-10 mb-28  " style="background: transparent linear-gradient(180deg, #FFFFFF 0%, #FFFFFF 57%, #F4F6FF 100%) 0% 0% no-repeat padding-box;">
+    </nav><img class="relative top-[60px] w-full bg-mainColor" src="img/wave2.svg" alt="alt" loading="lazy">
+    <section class="contact mt-10  relative z-10 lg:pb-20 " style="background: transparent linear-gradient(180deg, #FFFFFF 0%, #FFFFFF 57%, #F4F6FF 100%) 0% 0% no-repeat padding-box;">
       <input id="contry-code" type="hidden" name="" value="Egypt">
       <div class="container px-[68px] maxlg:px-9 relative">
         <div class="content flex justify-between maxlg:flex-col py-6">
@@ -62,21 +63,24 @@
               <div class="flex items-center justify-between maxlg:flex-col"> 
                 <div class="md:w-[25%] maxlg:w-full maxlg:mt-3">
                   <label class="block font-bold text-2xl maxlg:text-lg text-black/50 capitalize" for="">code</label>
-                  <select class="border-[#EFEFEF] bg-[#f3f3f5ad] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25" disabled id="code" name=""></select>
+                  <select class="border-[#EFEFEF] bg-[#f3f3f5ad] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25" id="code" name=""></select>
                 </div>
                 <div class="md:w-[70%] maxlg:w-full maxlg:mt-3">
                   <label class="block font-bold text-2xl maxlg:text-lg text-black/50 capitalize" for="">phone number</label>
-                  <input class="maxlg:w-full border-[#EFEFEF] bg-[#FAFAFB] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25" placeholder="Enter your mobile phone" type="tel">
+                  <input class="maxlg:w-full border-[#EFEFEF] bg-[#FAFAFB] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25 phone-number" placeholder="Enter your mobile " type="tel">
                 </div>
               </div>
               <div class="row"> 
                 <label class="block font-bold text-2xl maxlg:text-lg text-black/50 capitalize" for="">email</label>
-                <input class="border-[#EFEFEF] bg-[#FAFAFB] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25" placeholder="Enter your email address" type="email">
+                <input class="border-[#EFEFEF] bg-[#FAFAFB] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25 email-input" placeholder="Enter your email address" type="email">
               </div>
               <div class="row"> 
                 <label class="block font-bold text-2xl maxlg:text-lg text-black/50 capitalize" for="">Type Of Service</label>
                 <select class="text-[#3D3D3D]/25 border-[#EFEFEF] bg-[#FAFAFB] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25"> 
                   <option value=""> Choose type of service</option>
+                  <option value=""> serv1 </option>
+                  <option value=""> serv2 </option>
+                  <option value=""> serv1 </option>
                 </select>
               </div>
               <div class="row"> 
@@ -84,7 +88,7 @@
                 <textarea class="border-[#EFEFEF] bg-[#FAFAFB] p-4 rounded-lg w-full outline-none placeholder:text-[#3D3D3D]/25 max-h-[200px]" name="" placeholder="Enter message here ..."> </textarea>
               </div>
               <div class="row"> 
-                <button class="btn bg-mainColor text-white">SEND NOW</button>
+                <button class="btn bg-mainColor text-white maxlg:mx-auto">SEND NOW</button>
               </div>
             </form>
           </div>
@@ -94,28 +98,11 @@
             </div>
           </div>
         </div>
-        <div class="sochil flex items-center justify-between mt-20 maxlg:flex-col">
-          <div class="item flex items-center maxlg:mb-16 maxlg:flex-col">
-            <div class="icon maxlg:ltr:mx-0 maxlg:rtl:mx-0 ltr:mr-4 rtl:ml-4 maxlg:mb-2"> <i class="fa-regular fa-map text-mainColor  text-6xl maxlg:text-4xl "></i></div>
-            <div class="flex flex-col maxlg:items-center">
-              <h2 class="text-[#131B39] text-3xl maxlg:text-[23px] font-bold capitalize">Location</h2>
-              <p class="capitalize text-[#131B39] text-2xl maxlg:text-xl "> 6th of October City,Giza</p>
-            </div>
-          </div><a class="item flex items-center maxlg:mb-16 maxlg:flex-col" href="mailto:info@paymac.net">
-            <div class="icon maxlg:ltr:mx-0 maxlg:rtl:mx-0 ltr:mr-4 rtl:ml-4 maxlg:mb-2"> <i class="fa-regular fa-envelope   text-mainColor  text-6xl maxlg:text-4xl "></i></div>
-            <div class="flex flex-col maxlg:items-center">
-              <h2 class="text-[#131B39] text-3xl maxlg:text-[23px] font-bold capitalize">Email</h2>
-              <p class="capitalize text-[#131B39] text-2xl maxlg:text-xl "> info@paymac.net</p>
-            </div></a><a class="item flex items-center maxlg:mb-16 maxlg:flex-col" href="tel:+201012370014">
-            <div class="icon maxlg:ltr:mx-0 maxlg:rtl:mx-0 ltr:mr-4 rtl:ml-4 maxlg:mb-2"> <i class="fa-solid fa-mobile-screen  text-mainColor  text-6xl maxlg:text-4xl "></i></div>
-            <div class="flex flex-col maxlg:items-center">
-              <h2 class="text-[#131B39] text-3xl maxlg:text-[23px] font-bold capitalize">Phone</h2>
-              <p class="capitalize text-[#131B39] text-2xl maxlg:text-xl ">+201012370014</p>
-            </div></a>
-        </div>
       </div>
-    </section><a class="fixed flex items-center justify-center bottom-[20%] w-16 h-16 maxlg:w-12 maxlg:h-12 text-2xl text-white bg-mainColor rounded-full ltr:right-8 rtl:left-8 z-50 cursor-pointer " href="mailto:info@paymac.net"><i class="fa-solid fa-message"></i></a>
-    <div class="fixed flex items-center justify-center bottom-[12%] w-10 h-10 maxlg:w-6 maxlg:h-6 maxlg:bottom-[15%] text-white bg-mainColor rounded-full  z-50 cursor-pointer ltr:right-10 rtl:left-10  ltr:left-right-10 maxlg:ltr:right-10 maxlg:rtl:left-right-10" onclick="window.scrollTo(0 ,0);"><i class="fa-solid fa-chevron-up"></i></div>
+    </section>
+    <div class="fixed all-icons shadow-xl flex items-center justify-center bottom-[20%] w-16 h-16 maxlg:w-12 maxlg:h-12 text-2xl text-white bg-mainColor rounded-full ltr:right-8 rtl:left-8 z-50 cursor-pointer "><i class="fa-solid fa-message"></i></div>
+    <div class="fixed icons-hidd overflow-hidden h-0 duration-700  bottom-[33%] text-xl text-white  ltr:right-12 rtl:left-12 z-50 cursor-pointer "><a class="fa-solid fa-message my-2 bg-mainColor shadow-2xl w-10 h-10 flex items-center justify-center rounded-full" href="mailto: info@paymac.net"></a><a class="fa-solid fa-phone my-2 bg-mainColor shadow-2xl w-10 h-10 flex items-center justify-center rounded-full" href="tel:+201012370014"></a><a class="fa-brands fa-whatsapp my-2 bg-mainColor shadow-2xl w-10 h-10 flex items-center justify-center rounded-full" href="https://api.whatsapp.com/send/?phone=201006452813&amp;text&amp;type=phone_number&amp;app_absent=0"></a><a class="fa-brands fa-facebook-messenger my-2 bg-mainColor shadow-2xl w-10 h-10 flex items-center justify-center rounded-full" href="#"></a></div>
+    <div class="fixed shadow-xl flex items-center justify-center bottom-[12%] w-10 h-10 maxlg:w-6 maxlg:h-6 maxlg:bottom-[15%] text-white bg-mainColor rounded-full  z-50 cursor-pointer ltr:right-10 rtl:left-10  ltr:left-right-10 maxlg:ltr:right-10 maxlg:rtl:left-right-10" onclick="window.scrollTo(0 ,0);"><i class="fa-solid fa-chevron-up"></i></div>
     <footer class="bg-mainColor py-20 "> 
       <div class="container">
         <div class="footer-content px-10 maxlg:px-5">
@@ -131,16 +118,17 @@
                 <li class="mb-2"><a class="capitalize" href="about.html">about us</a> </li>
                 <li class="mb-2"><a class="capitalize" href="service.html">Services</a> </li>
                 <li class="mb-2"><a class="capitalize" href="content.html">Contact Us</a> </li>
+                <li class="mb-2"><a class="capitalize" href="blogger.html">blogger</a> </li>
               </ul>
             </div>
             <div class="part">
               <h3 class="footer-title text-white text-2xl mb-4">services</h3>
               <ul class="text-white text-lg font-medium">
-                <li class="mb-2"><a class="capitalize" href="#">Website</a> </li>
-                <li class="mb-2"><a class="capitalize" href="#">E-Commerce</a> </li>
-                <li class="mb-2"><a class="capitalize" href="#">ERP Systems</a> </li>
-                <li class="mb-2"><a class="capitalize" href="#">Mobil Application</a> </li>
-                <li class="mb-2"><a class="capitalize" href="#">Web Development</a> </li>
+                <li class="mb-2"><a class="capitalize" href="service.html">Website</a> </li>
+                <li class="mb-2"><a class="capitalize" href="service.html">E-Commerce</a> </li>
+                <li class="mb-2"><a class="capitalize" href="service.html">ERP Systems</a> </li>
+                <li class="mb-2"><a class="capitalize" href="service.html">Mobil Application</a> </li>
+                <li class="mb-2"><a class="capitalize" href="service.html">Web Development</a> </li>
               </ul>
             </div>
             <div class="part">
